cmake tweaks to output "XPLM_64.so" as filename for Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,6 +250,25 @@ install(TARGETS XPLM
 ENDIF( APPLE )
 
 
+
+
+
+IF(CMAKE_SYSTEM_NAME STREQUAL Linux)
+    set_target_properties(XPLM PROPERTIES
+            OUTPUT_NAME "XPLM_64"
+            PREFIX ""
+    )
+
+ENDIF(CMAKE_SYSTEM_NAME STREQUAL Linux)
+
+
+
+
+
+
+
+
+
 # Example build:
 # cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
 # cmake --build build --config Release
